--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,17 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "aiohttp>=3.13.0",
+    "certifi>=2025.10.5",
+    "dotenv>=0.9.9",
+    "psycopg[binary]>=3.2.10",
+    "psycopg-pool>=3.2.6",
+    "pydantic>=2.12.0",
+    "pydantic-settings>=2.11.0",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.0",
+]
