--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "psycopg-pool>=3.2.6",
     "pydantic>=2.12.0",
     "pydantic-settings>=2.11.0",
+    "pytest>=8.4.2",
+    "pytest-postgresql>=7.0.2",
+    "ipython>=9.6.0",
 ]
 
 [dependency-groups]
