--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,16 @@ dependencies = [
     "pytest>=8.4.2",
     "pytest-postgresql>=7.0.2",
     "ipython>=9.6.0",
+    "pyright>=1.1.406",
+    "pytest-cov>=7.0.0",
 ]
 
 [dependency-groups]
-dev = [
-    "ruff>=0.14.0",
-]
+dev = ["ruff>=0.14.0"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/async_web_scraper"]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
