--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 addopts =
-    --cov=.
+    --cov=src
     --cov-branch
     --cov-fail-under=75
     --cov-report=html
@@ -12,6 +12,9 @@ norecursedirs =
     __pycache__
     htmlcov
 
-pythonpath = "."
-python_files = test__*.py
+pythonpath = src
+python_files = test_*.py
 testpaths = tests
+
+markers =
+    asyncio: mark a test as asyncio (async) test
