--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.9"
 
 services:
   vscode:
@@ -8,10 +8,26 @@ services:
       args:
         UV_VERSION: latest
     command: "sleep infinity"
-    ports:
-      - "8000:8000"
     user: vscode
     volumes:
       - ..:/workspace:cached
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    depends_on:
+      test-db:
+        condition: service_healthy
+
+  test-db:
+    image: postgres:16
+    container_name: test-db
+    environment:
+      POSTGRES_USER: test_user
+      POSTGRES_PASSWORD: test_pass
+      POSTGRES_DB: test_db
+    ports:
+      - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U test_user -d test_db"]
+      interval: 3s
+      retries: 5
+      timeout: 5s
